# amp

./: README.md  pyproject.toml  requirements.txt
booking/: models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
users/: models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_avatar_remove_user_phone_user_tg_chat_id.py
